--- a/budgy/home/templates/home/transaction_expense.html
+++ b/budgy/home/templates/home/transaction_expense.html
@@ -1,8 +1,7 @@
 {% extends "home/layout.html" %}
 {% block title %}
-  Home
+    Home
 {% endblock title %}
-
 {% block body %}
     <script>
         // function for fill today date as initial in date field
@@ -298,7 +297,6 @@
             margin-left: 20px;
         }
     </style>
-    
     <div class="app-container">
         <!-- Sidebar -->
         <aside class="sidebar">
@@ -307,42 +305,72 @@
             </div>
             <nav class="sidebar-nav">
                 <ul>
-                    <li><a href="{% url 'home' request.user.id %}">HOME</a></li>
-                    <li><a href="{% url 'dashboard' request.user.id %}">Dashboard</a></li>
-                    <li class="active"><a href="{% url 'transaction_income' request.user.id %}">Transaction</a></li>
-                    <li><a href="{% url 'stats' request.user.id %}">Stats</a></li>
-                    <li><a href="{% url 'settings' request.user.id %}">Settings</a></li>
+                    <li>
+                        <a href="{% url 'home' request.user.id %}">HOME</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'dashboard' request.user.id %}">Dashboard</a>
+                    </li>
+                    <li class="active">
+                        <a href="{% url 'transaction_income' request.user.id %}">Transaction</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'stats' request.user.id %}">Stats</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'settings' request.user.id %}">Settings</a>
+                    </li>
                 </ul>
             </nav>
             <div class="sidebar-footer">
                 <div class="logout-icon"></div>
             </div>
         </aside>
-
         <!-- Main Content -->
         <main class="main-content">
             <div class="transaction-form-container">
                 <div class="tabs">
-                    <a href="{% url 'transaction_income' request.user.id %}"><button class="tab-button">Income</button></a>
-                    <a href="{% url 'transaction_expense' request.user.id %}"><button class="tab-button active">Expense</button></a>
-                    <a href="{% url 'transaction_transfer' request.user.id %}"><button class="tab-button">Transfer</button></a>
+                    <a href="{% url 'transaction_income' request.user.id %}">
+                        <button class="tab-button">Income</button>
+                    </a>
+                    <a href="{% url 'transaction_expense' request.user.id %}">
+                        <button class="tab-button active">Expense</button>
+                    </a>
+                    <a href="{% url 'transaction_transfer' request.user.id %}">
+                        <button class="tab-button">Transfer</button>
+                    </a>
                 </div>
-                <form class="transaction-form", action="{% url 'transaction_expense' user_id=request.user.id %}" method="post" >
+                <form class="transaction-form"
+                      action="{% url 'transaction_expense' user_id=request.user.id %}"
+                      method="post">
                     <div class="form-group">
                         <label for="date">Date</label>
                         <input type="date" id="date_input" name="date" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label for="amount">Amount</label>
-                        <input type="text" name="amount" class="form-control" placeholder="Enter amount" required>
+                        <input type="text"
+                               name="amount"
+                               class="form-control"
+                               placeholder="Enter amount"
+                               required>
                     </div>
                     <div class="form-group">
                         <label for="category">Category</label>
-                        <input type="text" id="category_input" name="category_name" class="form-control" placeholder="Enter category" required>
+                        <input type="text"
+                               id="category_input"
+                               name="category_name"
+                               class="form-control"
+                               placeholder="Enter category"
+                               required>
                     </div>
                     <div class="form-group">
                         <label for="account">Account</label>
-                        <input type="text" name="account" class="form-control" placeholder="Enter account" required>
+                        <input type="text"
+                               name="account"
+                               class="form-control"
+                               placeholder="Enter account"
+                               required>
                     </div>
                     <div class="form-actions">
                         <button type="submit" class="save-button">Save</button>
@@ -350,14 +378,14 @@
                 </form>
             </div>
         </main>
-
         <aside class="right-sidebar">
             <div class="category-container">
                 <div class="category-header">
                     <h3>Category</h3>
-                    <button class="edit-button" onclick="toggleEditMode()"><i class="fas fa-edit"></i> Edit</button>
+                    <button class="edit-button" onclick="toggleEditMode()">
+                        <i class="fas fa-edit"></i> Edit
+                    </button>
                 </div>
-
                 <!-- List of Categories with Delete Option (Initially Visible) -->
                 <ul id="categoryList" class="category-list">
                     {% for category in categories %}
@@ -365,26 +393,33 @@
                             {{ category.category_name }}
                             <!-- Delete Button (Initially Hidden) -->
                             <form method="POST" style="display: inline;">
-                                <input type="hidden" name="delete_category_name" value="{{ category.category_name }}">
-                                <button type="submit" class="delete-button" style="float: right; display: none;">delete</button>
+                                <input type="hidden"
+                                       name="delete_category_name"
+                                       value="{{ category.category_name }}">
+                                <input type="hidden" name="trans_type" value="expense">
+                                <button type="submit"
+                                        class="delete-button"
+                                        style="float: right;
+                                               display: none">delete</button>
                             </form>
                         </li>
                     {% endfor %}
                 </ul>
-
                 <!-- Add New Category Form (Initially Hidden) -->
                 <div id="addCategoryForm" style="display: none; margin-top: 20px;">
                     <form method="POST">
-                        <input type="text" id="newCategory" name="category_name" placeholder="Add category" required>
+                        <input type="text"
+                               id="newCategory"
+                               name="category_name"
+                               placeholder="Add category"
+                               required>
                         <button type="submit">Add</button>
                         <input type="hidden" name="trans_type" value="expense">
                     </form>
                 </div>
             </div>
         </aside>
-
-    </div> 
-
+    </div>
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-social">
@@ -399,5 +434,4 @@
             <a href="#">Privacy Policy</a>
         </div>
     </footer>
-
 {% endblock body %}
