--- a/budgy/home/templates/home/layout.html
+++ b/budgy/home/templates/home/layout.html
@@ -13,7 +13,8 @@
           rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap"
           rel="stylesheet">
     <style>
@@ -100,7 +101,6 @@
         text-shadow: 0 0 6px rgba(255,255,255,0.6);
       } 
     </style>
-    
   </head>
   <body>
     <!-- Navbar -->
@@ -113,20 +113,16 @@
                 data-bs-target="#navbarContent">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end"
-             id="navbarContent">
+        {% comment %} <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active"
-                 aria-current="page"
-                 href="{% url 'home' request.user.id %}">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'home' request.user.id %}">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'dashboard' request.user.id %}">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"
-                 href="{% url 'transaction_income' request.user.id %}">Transaction</a>
+              <a class="nav-link" href="{% url 'transaction_income' request.user.id %}">Transaction</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'stats' request.user.id %}">Stats</a>
@@ -135,14 +131,14 @@
               <a class="nav-link" href="{% url 'settings' request.user.id %}">Settings</a>
             </li>
           </ul>
-        </div>
+        </div> {% endcomment %}
       </div>
     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     {% block body %}
     {% endblock body %}
-    <footer class="text-center py-4 bg-light mt-auto">
+    {% comment %} <footer class="text-center py-4 bg-light mt-auto">
       <p class="mb-0">© 2025 BUDGY Team — All Rights Reserved</p>
-    </footer>
+    </footer> {% endcomment %}
   </body>
 </html>
