--- a/budgy/home/templates/home/layout.html
+++ b/budgy/home/templates/home/layout.html
@@ -17,6 +17,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap"
           rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <style>
       body {
         font-family: "Chakra Petch", sans-serif;
