--- a/budgy/home/templates/home/stats.html
+++ b/budgy/home/templates/home/stats.html
@@ -24,6 +24,9 @@
                     <li>
                         <a href="{% url 'transaction_income' request.user.id %}">Transaction</a>
                     </li>
+                    <li>
+                        <a href="{% url 'account_management' request.user.id %}">Accounts</a>
+                    </li>
                     <li class="active">
                         <a href="{% url 'stats' request.user.id %}">Stats</a>
                     </li>
