--- a/budgy/home/templates/home/transaction_transfer.html
+++ b/budgy/home/templates/home/transaction_transfer.html
@@ -72,6 +72,9 @@
                         <a href="{% url 'transaction_income' request.user.id %}">Transaction</a>
                     </li>
                     <li>
+                        <a href="{% url 'account_management' request.user.id %}">Accounts</a>
+                    </li>
+                    <li>
                         <a href="{% url 'stats' request.user.id %}">Stats</a>
                     </li>
                     <li>
