--- a/budgy/home/templates/home/settings.html
+++ b/budgy/home/templates/home/settings.html
@@ -64,6 +64,20 @@
             </form>
             <hr>
 
+            <!-- Email Form -->
+            <form method="POST">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label for="{{ e_form.email.id_for_label }}" class="form-label">Email Address</label>
+                    <input type="email" name="email" class="form-control" value="{{ e_form.instance.email }}" required id="{{ e_form.email.id_for_label }}">
+                    {% for error in e_form.email.errors %}
+                       <div class="text-danger mt-1"><small>{{ error }}</small></div>
+                    {% endfor %}
+                </div>
+                <button type="submit" name="update_email" class="btn btn-primary">Save Email</button>
+            </form>
+            <hr>
+
             <!-- Other Actions -->
             <div class="mt-4">
                 <div class="mb-3">
