--- a/budgy/authorized/templates/authorized/login.html
+++ b/budgy/authorized/templates/authorized/login.html
@@ -27,6 +27,7 @@
       <div class="alert alert-secondary text-center">Please login.</div>
     {% endif %}
     <!-- Login Form -->
+     
     <div class="card shadow-sm mt-4">
       <div class="card-body">
         <h4 class="card-title mb-3 text-center">Login</h4>
@@ -46,10 +47,15 @@
                    placeholder="Password"
                    required>
           </div>
+          <div style="margin-top: 10px;">
+            <a href="{% url 'forgot_password' %}">Forgot password?</a>
+          </div>
+          <br>
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
       </div>
     </div>
+    
     <!-- Register link -->
     <div class="card mt-3 text-center">
       <div class="card-body">
